Test/dafny4/git-issue50.dfy.expect
git-issue50.dfy(25,20): Error: Type or type parameter is not declared in this scope: T (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
1 resolution/type errors detected in git-issue50.dfy
